@@ -10,6 +10,7 @@
 
 For more details, please see the README file.
 
+	- feat: Display some warnings if the compound heterozygosity analysis is not processed
 	- feat: Add the "-version" option
 	- feat: Take into account of a new format in the downloaded OMIM data (Approuved Gene symbol) 
 	- feat: Add bugfix in case of no external BED annotation files used
